--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 html, body {
   margin: 0;
-  background-color: coral;
+  background-color: rgb(96, 104, 97);
 }
 
 body {
@@ -75,87 +75,4 @@ article.journal-entry .main-image {
   display: -webkit-box;
   -webkit-box-orient: vertical;  
   overflow: hidden;
-}
-
-.contacts {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 40px;
-  margin-top: 40px;
-}
-
-.contact-card {
-  flex-basis: 225px;
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  padding: 13px;
-  padding-bottom: 20px;
-  background-color: tomato;
-  &:hover {
-    background-color: #991a1a;
-  }
-  transition: background-color 0.3s;
-}
-
-.contact-card > img {
-  width: 100%;
-  height: 250px;
-  align-self: center;
-  border-radius: 5px;
-  object-fit: cover;
-}
-
-.contact-card > h3 {
-  font-weight: 700;
-  font-size: 18px;
-}
-
-.info-group {
-  display: flex;
-  align-items: center;
-}
-
-.info-group > img {
-  height: 11px;
-  margin-right: 8px;
-}
-
-.info-group > p {
-  margin-block: 3px;
-  font-size: 12px;
-  color: #2B283A;
-}
-
-.joke > h1 {
-  font-size: 2rem;
-  text-align: center;
-  margin-top: 40px;
-}
-
-.joke > p {
-  font-size: 1.5rem;
-  text-align: center;
-  margin-top: 20px;
-}
-
-.joke > button {
-  display: block;
-  margin: 20px auto;
-  padding: 10px 20px;
-  background-color: #070108;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 1rem;
-  cursor: pointer;
-}
-
-.joke > h2 {
-  font-size: 3rem;
-  text-align: center;
-  margin-top: 20px;
-  font-family:Georgia, 'Times New Roman', Times, serif;
 }
