--- a/src/index.css
+++ b/src/index.css
@@ -1,150 +1,106 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: Inter, sans-serif;
-  background-color: #FAFAF8;
-}
-
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 11px;
-  height: 80px;
-  background-color: white;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
-}
-
-header > img {
-  width: 50px;
-}
-
-header > h1 {
-  font-weight: 400;
+    font-family: "Karla", sans-serif;
+    margin: 0;
 }
 
 main {
-  padding: 30px 30px 10px;
+    margin-inline: auto;
+    padding: 36px;
+    max-width: 600px;
 }
 
-.add-ingredient-form {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-  height: 38px;
+.header {
+    display: flex;
+    align-items: center;
+    height: 65px;
+    background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+    color: white;
+    padding: 20px;
 }
 
-.add-ingredient-form > input {
-  border-radius: 6px;
-  border: 1px solid #D1D5DB;
-  padding: 9px 13px;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
-  flex-grow: 1;
-  min-width: 150px;
-  max-width: 400px;
+.header > img {
+    height: 100%;
+    margin-right: 6px;
 }
 
-.add-ingredient-form > button {
-  font-family: Inter, sans-serif;
-  border-radius: 6px;
-  border: none;
-  background-color: #141413;
-  color: #FAFAF8;
-  width: 150px;
-  font-size: 0.875rem;
-  font-weight: 500;
+.header > h1 {
+    font-size: 1.25rem;
+    margin-right: auto;
 }
 
-.add-ingredient-form > button::before {
-  content: "+";
-  margin-right: 5px;
+.form {
+    display: grid;
+    grid-template: auto auto / 1fr 1fr;
+    gap: 17px;
+    margin-bottom: 17px;
 }
 
-ul.ingredients-list {
-  margin-bottom: 48px;
+.form input {
+    width: 100%;
+    margin-top: 5px;
+    border-radius: 5px;
+    border: 1px solid #D5D4D8;
+    text-indent: 5px;
 }
 
-ul.ingredients-list > li {
-  color: #475467;
-  line-height: 28px;
+.form button {
+    grid-column: 1 / -1;
+    border-radius: 5px;
+    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    color: white;
+    border: none;
+    cursor: pointer;
 }
 
-.get-recipe-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 8px;
-  background: #F0EFEB;
-  padding: 10px 28px;
+.form input, .form button {
+    min-height: 40px;
+    font-family: "Karla", sans-serif;
 }
 
-.get-recipe-container h3 {
-  font-size: 1.125rem;
-  font-weight: 500;
-  line-height: 24px;
+.meme {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.get-recipe-container p {
-  color: #6B7280;
-  font-size: 0.875rem;
-  line-height: 20px;
+.meme > img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 3px;
 }
 
-.get-recipe-container button {
-  border: none;
-  border-radius: 6px;
-  background: #D17557;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
-  color: #FAFAF8;
-  padding: 9px 17px;
-  font-family: Inter, sans-serif;
-  font-size: 0.875rem;
-  cursor: pointer;
+.meme span {
+    position: absolute;
+    text-align: center;
+    margin-block: 15px;
+    padding-inline: 5px;
+    font-family: impact, sans-serif;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
 }
 
-.card {
-  background-color: white;
-  width: 200px;
-  border: 1px solid lightgray;
-  border-radius: 10px;
-  height: 350px;
+.bottom {
+    bottom: 0;
 }
 
-.card .avatar {
-  width: 100%;
-  padding: 10%;
-  padding-bottom: 0;
-}
-
-.card .name {
-  margin-block: 13px;
-  color: #333333;
-}
-
-.card .info {
-  padding: 10px;
-}
-
-.card .favorite {
-  width: 25px;
-  cursor: pointer;
-}
-
-.card .contact {
-  font-size: 0.75rem;
-  color: gray;
-  margin-block: 7px;
-}
-
-.card .favorite-button {
-  border: none;
-  background: transparent;
-}
-
-.card .favorite-button:active {
-  transform: none;
-  box-shadow: none;
+.top {
+    top: 0;
 }
